<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:src="@drawable/img_1"
                app:shapeAppearanceOverlay="@style/corner_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/laProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_personLogin"
                    android:layout_width="116dp"
                    android:layout_height="116dp"
                    android:src="@drawable/image_2"
                    android:layout_gravity="center"
                    android:layout_marginTop="160dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:shapeAppearanceOverlay="@style/corner_image" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/log_in_to_your_account"
                    android:textColor="@color/text_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_gravity="center" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNameTil"
                    android:layout_width="410dp"
                    android:layout_height="70dp"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/red"
                    app:helperText="*"
                    android:layout_gravity="center"
                    app:helperTextTextColor="@color/red"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_username"
                        android:layout_width="357dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:background="@drawable/frame_desgin"
                        android:drawableStart="@drawable/person_24"
                        android:ems="10"
                        android:hint="@string/user_name"
                        android:inputType="textEmailAddress"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTil"
                    android:layout_width="410dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/red"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red"
                    app:passwordToggleEnabled="true"
                    android:layout_margin="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_password"
                        android:layout_width="357dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:autofillHints="Password"
                        android:background="@drawable/frame_desgin"
                        android:drawableStart="@drawable/lock_24"
                        android:ems="10"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/remember_me"
                        android:textSize="10sp"
                        android:textStyle="bold|italic"
                        android:layout_marginStart="10dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_forgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@string/forget_password"
                        android:textAllCaps="false"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        android:layout_marginStart="100dp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/desgin_button"
                    android:enabled="false"
                    android:text="@string/login"
                    android:textColor="@color/status_button_color"
                    android:layout_margin="10dp"
                    android:layout_gravity="center" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_registerPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="8dp"
                    android:background="@color/white"
                    android:text="@string/don_t_have_an_account_register"
                    android:textAllCaps="false" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>